--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "dependencies": {
     "@11ty/eleventy": "^0.10.0",
     "clean-css": "^4.2.1",
+    "file-system": "^2.2.2",
     "markdown-it": "^10.0.0",
     "markdown-it-anchor": "^5.2.4",
+    "pa11y": "^5.3.0",
     "path": "^0.12.7"
   }
 }
